<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
tools:context=".LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/app_color_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/login"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/mulibold"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|center_vertical">

        <ImageView
            android:id="@+id/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="@color/white"
            android:padding="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/username"
            android:textSize="17sp"
            android:fontFamily="@font/mulilight"
            android:inputType="textPersonName"
            android:textColorHint="@color/text_color"
            android:textColor="@color/text_color"
            />

        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:fontFamily="@font/mulilight"
            android:textColorHint="@color/text_color"
            android:textColor="@color/text_color"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:fontFamily="@font/mulilight"
            android:checked="false"
            android:buttonTint="@color/gray_mid"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/round_corner_orange_back"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulibold"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/mulilight"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/forgot_pass"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:theme="@style/progressBarBlue"
        android:layout_centerInParent="true"/>

</LinearLayout>

</LinearLayout>
