<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
tools:context=".ProtocolActivity">


<include layout="@layout/toolbar" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/udp_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/udp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:fontFamily="@font/mulibold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/udp_desc"
                android:fontFamily="@font/mulilight"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dim" />

        <LinearLayout
            android:id="@+id/tcp_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tcp"
                android:textStyle="bold"
                android:fontFamily="@font/mulibold"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/mulilight"
                android:text="@string/tcp_desc"
                android:textSize="16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dim" />

        <LinearLayout
            android:id="@+id/both_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:textColor="@color/text_color"
                android:fontFamily="@font/mulibold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/mulilight"
                android:text="@string/both_desc"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/protocol_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="end"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/udp_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:theme="@style/RadioButtonStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dim" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/tcp_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:theme="@style/RadioButtonStyle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dim" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/both_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:theme="@style/RadioButtonStyle" />
    </RadioGroup>


</LinearLayout>


</LinearLayout>
