<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/white"
tools:context=".SplitTunnelingActivity">

<ProgressBar
    android:id="@+id/progress_circular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:theme="@style/progressBarBlue"
    android:layout_centerInParent="true"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/switchLayout"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:gravity="center_vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split_tunneling_on"
            android:textSize="16sp"
            android:fontFamily="@font/mulibold"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:padding="5dp"
                android:contentDescription="@string/search" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/split_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:theme="@style/SCBSwitch" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/searchLayour"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginRight="15sp"
        android:visibility="gone"
        android:gravity="center">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            android:layout_weight="1">
        </androidx.appcompat.widget.SearchView>

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/gray_dim" />
    <LinearLayout
        android:id="@+id/no_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/split_tunneling"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/split_tunnel_des"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="normal"
            android:fontFamily="@font/mulilight"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:lineSpacingExtra="3dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/split_tunneling_vpn_used_for"
                android:textSize="20sp"
                android:fontFamily="@font/mulibold"
                android:textColor="@color/text_color"
                android:layout_margin="10dp"
                android:paddingTop="15dp"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="10dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</LinearLayout>




</RelativeLayout>
